--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
         \vspace*{1cm}
             
         \Huge
-        \textbf{Título del trabajo}
+        \textbf{desafio de la piramide}
             
         \vspace{0.5cm}
         \LARGE
