--- a/main.tex
+++ b/main.tex
@@ -13,15 +13,15 @@
         \vspace*{1cm}
             
         \Huge
-        \textbf{desafio de la piramide}
+        \textbf{Seguimiento de instrucciones}
             
         \vspace{0.5cm}
         \LARGE
-        Subtítulo
+        desafió de la pirámide 
             
         \vspace{1.5cm}
             
-        \textbf{Nombres y Apellidos del autor}
+        \textbf{Rolman David Echavarria Prince}
             
         \vfill
             
@@ -38,56 +38,28 @@
 
 \tableofcontents
 \newpage
-\section{Sección introductoria}\label{intro}
-Esta es la primera sección, podemos agregar algunos elementos adicionales y todo será escrito correctamente. Más aún, si una palabra es demasiado larga y tiene que ser truncada, babel tratará de truncarla correctamente dependiendo del idioma.
+\section{Introducción}\label{intro}
+Demostrar la capacidad motriz de un ejercicio con una sola mano; buscando formar con dos cartas una pirámide sobre una hoja, el objetivo de ver como el participante logra comprender las instrucciones.
 
 \section{Sección de contenido} \label{contenido}
-Esta sección es para agregar toda la información correspondiente con código, citas, etc.
+Desafió de formar una pirámide con dos cartas sobre una hoja.
+\subsection{materiales}
+\begin{enumerate}
+    \item Dos cartas (Preferiblemente iguales).
+    \item Una hoja en condiciones normales.
+    \item Disponer de una superficie horizontal plana (Preferiblemente una mesa).
+\end{enumerate}
+\subsection{Sugerencias}
+\begin{enumerate}
+    \item [-]El ángulo superior que une las dos cartas formen aproximadamente 40º.
+    \item[-]Los lados cortos superiores que unen las dos cartas alineadas, quede uno sobre el otro justamente, considerar esto si una carta es más densa que la otra.
+\end{enumerate}
 \subsection{Citación}
 Vamos a citar por ejemplo un artículo de \textbf{Albert Einstein} \cite{einstein}.
 También es posible citar libros \cite{dirac} o documentos en línea \cite{knuthwebsite}.\\\\
 Revisar en la última sección el formato de las referencias en IEEE.
 
-\subsection{Incluir código en el documento}
-%
-A continuación, se presenta el código \ref{codigo_ejemplo}, que nos permite incluir en el informe partes de programa que requieran una explicación adicional.
-\begin{lstlisting}[language=C++, label=codigo_ejemplo]
-// Programa desarrollado, compilado y ejecutado en https://www.onlinegdb.com
-#include <iostream>
 
-/*
- * Esto es un comentario de varias lineas
- */
-
-// Comentario de una sola linea
-
-#define N 10
-
-using namespace std;
-
-int main()
-{
-    
-    for( int i = 0 ; i < N ; i++ ){
-        
-        if( !(i % 2) )
-            cout << " El valor de i es -> " << i << endl;
-    }
-    
-    return 0;
-}
-
-//Resultado programa
-
-/*
-El valor de i es -> 0
-El valor de i es -> 2
-El valor de i es -> 4
-El valor de i es -> 6
-El valor de i es -> 8
-*/
-\end{lstlisting}
-En la sección \ref{imagenes}, se presentará como añadir ilustraciones al texto.
 
 \section{Inclusión de imágenes} \label{imagenes}
 
