--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
         \vspace{0.8cm}
             
         \Large
-        Despartamento de Ingeniería Electrónica y Telecomunicaciones\\
+        Departamento de Ingeniería Electrónica y Telecomunicaciones\\
         Universidad de Antioquia\\
         Medellín\\
         Marzo de 2021
@@ -54,25 +54,40 @@ Desafió de formar una pirámide con dos cartas sobre una hoja.
     \item [-]El ángulo superior que une las dos cartas formen aproximadamente 40º.
     \item[-]Los lados cortos superiores que unen las dos cartas alineadas, quede uno sobre el otro justamente, considerar esto si una carta es más densa que la otra.
 \end{enumerate}
+\subsection{procedimiento}
+El desafío busca saber si el participante comprende las indicaciones hacia el objetivo y lograr una destreza realizando este ejercicio.
+\begin{enumerate}
+    \item [-]Sobre una parte despejada de la mesa tendremos inicialmente la hoja con las dos cartas, que estarán las cartas debajo de la hoja.
+     \item [-]Escoger una mano (para este ejemplo la derecha).
+     \item [-]Con la mano levantar la hoja sin comprometer su estado, dejarla sobre la misma mesa sin volver a tapar las cartas.
+     \item [-]Tomar ambas cartas y dejarlas sobre el área central de la hoja.
+     \item [-]Deslizar suavemente la hoja sobre la mesa para llevarla cerca a usted en una posición cómoda para realizar el desafío.  
+     \item [-]Como las cartas en general son rectangulares con sus respectivos lados cortos y largos, tomar las cartas que queden juntas y alineadas.
+     \item [-]Con la yema de los dedos sujetaremos las cartas, no es necesario involucrar al meñique.
+     \item [-]Dedo índice sobre lado corto superior, pulgar en lado largo izquierdo, anular y medio en el lado largo derecho y lado corto inferior sobre la hoja.
+     \item [-]Tendrás una carta que mira tu palma y otra exterior, las cartas deben estar de forma normal respecto a la hoja.
+     \item [-]Aplicamos una presión con el índice, justamente para que no se corra en la separación.
+     \item [-]Buscamos separarlas con ayuda de pulgar, anular y medio desde la parte inferior solamente, la parte superior seguirá unida y será la cima de la pirámide.
+     \item [-]Recordar las sugerencias.
+     \item [-]Cuando consideremos una estabilidad en la estructura, soltarlas suavemente, logrando el objetivo dado.
+
+\end{enumerate}
 \subsection{Citación}
-Vamos a citar por ejemplo un artículo de \textbf{Albert Einstein} \cite{einstein}.
-También es posible citar libros \cite{dirac} o documentos en línea \cite{knuthwebsite}.\\\\
-Revisar en la última sección el formato de las referencias en IEEE.
+Portal de donde se extrajo el material como plantilla \cite{classroom}.
 
 
 
-\section{Inclusión de imágenes} \label{imagenes}
+\section{Ayuda ilustrativa} \label{imagenes}
 
-En la Figura (\ref{fig:cpplogo}), se presenta el logo de C++ contenido en la carpeta images.
+En la Figura (\ref{fig:objetivofinal}), se ilustra el objetivo deseado del desafió.
 
 \begin{figure}[h]
-\includegraphics[width=4cm]{cpplogo.png}
+\includegraphics[width=4cm]{objetivofinal.png}
 \centering
-\caption{Logo de C++}
-\label{fig:cpplogo}
+\caption{desafió de la pirámide}
+\label{fig:objetivofinal}
 \end{figure}
 
-Las secciones (\ref{intro}), (\ref{contenido}) y (\ref{imagenes}) dependen del estilo del documento.
 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
